--- a/src/scss/bootstrap/_variables.scss
+++ b/src/scss/bootstrap/_variables.scss
@@ -36,7 +36,9 @@ $grays: (
 // fusv-enable
 
 // scss-docs-start color-variables
-$blue:    #0d6efd !default;
+$blue:    #00355E !default;
+$blue-light:    #004D71 !default;
+$blue-gray:    #DEE9EE !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #d63384 !default;
@@ -298,8 +300,10 @@ $cyans: (
 // fusv-enable
 
 // scss-docs-start theme-color-variables
-$primary:       $blue !default;
-$secondary:     $gray-600 !default;
+$primary:       #00355E !default;
+$secondary:     #C0935B !default;
+$primary-light:   #004D71 !default;
+$primary-lighter:   #DEE9EE !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
