--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,19 +1,10 @@
 $primary-color: #004D71;
 $secondary-color: #C0935B;
-$et-primary-lighter-green: #f9fcfa;
-$et-secondary-green: #d6efe3;
-$et-secondary-orange: #f6972f;
-$et-secondary-gray: #414042;
-$et-secondary-light-gray: #cccccc;
-$et-secondary-glow-gray: #faf9f7;
-$et-secondary-plum: #78003B;
-$et-secondary-blue: #117ABE;
-$et-secondary-aqua: #73cee2;
-$secondary-color-hover: rgba(50, 173, 113, 0.1);
-$et-palette-info: #117abe;
-$et-palette-danger: #F66F5B;
-$et-palette-success: #32ad71;
-$et-palette-warning: #f9b122;
+$secondary-aqua: #38C0F0;
+$palette-info: #117abe;
+$palette-danger: #F66F5B;
+$palette-success: #32ad71;
+$palette-warning: #f9b122;
 
 // design systems colors
 $colors: (
