--- a/src/html/layout/footer.html
+++ b/src/html/layout/footer.html
@@ -1,3 +1,7 @@
+<script src="
+https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js
+"></script>
+
 <footer>
   <div class="footer">
     <div class="row">
