--- a/src/html/layout/footer.html
+++ b/src/html/layout/footer.html
@@ -9,7 +9,7 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js
     </div>
   </div>
   <div class="footer-dark">
-    <div class="row">
+    <div>
       <div class="container">dsfs</div>
     </div>
   </div>
