--- a/src/scss/bootstrap/_maps.scss
+++ b/src/scss/bootstrap/_maps.scss
@@ -60,7 +60,7 @@ $utilities-text: map-merge(
   (
     "black": to-rgb($black),
     "white": to-rgb($white),
-    "body": to-rgb($body-color)
+    "body": to-rgb($body-color),
   )
 ) !default;
 $utilities-text-colors: map-loop($utilities-text, rgba-css-var, "$key", "text") !default;
@@ -85,7 +85,7 @@ $utilities-bg: map-merge(
   (
     "black": to-rgb($black),
     "white": to-rgb($white),
-    "body": to-rgb($body-bg)
+    "body": to-rgb($body-bg),
   )
 ) !default;
 $utilities-bg-colors: map-loop($utilities-bg, rgba-css-var, "$key", "bg") !default;
@@ -109,7 +109,7 @@ $utilities-bg-subtle: (
 $utilities-border: map-merge(
   $utilities-colors,
   (
-    "white": to-rgb($white)
+    "white": to-rgb($white),
   )
 ) !default;
 $utilities-border-colors: map-loop($utilities-border, rgba-css-var, "$key", "border") !default;
