--- a/src/scss/_badge.scss
+++ b/src/scss/_badge.scss
@@ -11,6 +11,16 @@
     color:#ED374C;
 }
 
+.badge-recommand {
+    background: #E9E7FC;
+    color:#6F63E1;
+}
+
+.badge-new {
+    background: #E7F1F7;
+    color:#38C0F0;
+}
+
 .badge-success {
     background:  rgba(75, 200, 99, 0.1);
     color:#4BC863;
