--- a/src/scss/_badge.scss
+++ b/src/scss/_badge.scss
@@ -21,6 +21,11 @@
     color:#38C0F0;
 }
 
+.text-bg-badge-new {
+    color:#4BC863;
+    background: rgba(75, 200, 99, 0.10);
+  }
+
 .badge-success {
     background:  rgba(75, 200, 99, 0.1);
     color:#4BC863;
