--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -96,3 +96,7 @@ $font-bold: 'FF Shamel Family Sans One';
 $font-light: 'FF Shamel Family Sans One Book';
 
 $primary-color-light: #DEE9EE;
+$primary-color-darkblue: #004D71;
+$primary-color-darkblue-10: #004D711A;
+$primary-color-darkblue-20: #004d7133;
+$primary-color-darkblue-5: #004D710D;
