--- a/src/scss/_utilites.scss
+++ b/src/scss/_utilites.scss
@@ -3,6 +3,13 @@
     background-color: $primary-color-light;
   }
 
+.bg-primary-color-darkblue-5{
+  background-color: $primary-color-darkblue-5;
+}
+.bg-primary-color-darkblue-10{
+  background-color: $primary-color-darkblue-10;
+}
+
 .icons {
   width: 57px;
   height: 57px;
@@ -23,6 +30,20 @@
   &:active {
     background-color: darken($primary-color-light, 5%);
     border-color: $primary-color-light;
+  }
+}
+
+.btn-new-demand {
+  background-color: $primary-color-darkblue-10;
+  border-color: $primary-color-darkblue-10;
+  color: $primary-color-darkblue;
+  border-radius: 25px;
+  padding: 7px 16px;
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: $primary-color-darkblue-20;
+    border-color: $primary-color-darkblue-20;
   }
 }
 
@@ -82,6 +103,11 @@
 .border-right-error {
   border:0;
   border-right: 8px solid #ED374C;
+}
+
+.border-right-yellow {
+  border:0;
+  border-right: 8px solid #FFC91F;
 }
 
 label {
