--- a/src/scss/_utilites.scss
+++ b/src/scss/_utilites.scss
@@ -1,15 +1,17 @@
-//bg 
+//bg
 .bg-blue-gray {
-    background-color: $primary-color-light;
-  }
+  background-color: $primary-color-light;
+}
 
-.bg-primary-color-darkblue-5{
+.bg-primary-color-darkblue-5 {
   background-color: $primary-color-darkblue-5;
 }
-.bg-primary-color-darkblue-10{
+.bg-primary-color-darkblue-10 {
   background-color: $primary-color-darkblue-10;
 }
-
+.bg-placeholder-gray {
+  background-color: $placeholder-bg-gray;
+}
 .icons {
   width: 57px;
   height: 57px;
@@ -72,78 +74,83 @@
   width: 240px;
   margin: 0 auto;
 }
-
+// start borders syles
 .border-secondary-aqua {
-  border:0;
+  border: 0;
   border-right: 8px solid $secondary-aqua;
 }
 
 .border-secondary-dark {
-  border:0;
-  border-right: 8px solid #35424A;
+  border: 0;
+  border-right: 8px solid #35424a;
 }
 
 .border-primary-blue {
-  border:0;
-  border-right: 8px solid #80A6B8
-  ;
+  border: 0;
+  border-right: 8px solid #80a6b8;
 }
 
 .border-primary-dark-blue {
-  border:0;
-  border-right: 8px solid #004D71
-  ;
+  border: 0;
+  border-right: 8px solid #004d71;
 }
 
 .border-right-success {
-  border:0;
-  border-right: 8px solid #4BC863;
+  border: 0;
+  border-right: 8px solid #4bc863;
 }
 
 .border-right-error {
-  border:0;
-  border-right: 8px solid #ED374C;
+  border: 0;
+  border-right: 8px solid #ed374c;
 }
 
 .border-right-yellow {
-  border:0;
-  border-right: 8px solid #FFC91F;
+  border: 0;
+  border-right: 8px solid #ffc91f;
 }
-
+.border-right-gray {
+  border: 0;
+  border-right: 8px solid #7fa5b7;
+}
+// end borders syles
+.form-title-bg {
+  background-color: $cms-title-bar-bg;
+}
 label {
   font-size: 14px;
-  color: #42535C;
+  color: #42535c;
 }
 
 .invalid-feedback {
-  color:#ED374C;
+  color: #ed374c;
   font-size: 12px;
 }
 
 .invalid-input {
-  border-color: #ED374C;
+  border-color: #ed374c;
   &:focus {
-    border-color: #ED374C;
-    box-shadow: 0 0 0 0.25rem rgba(#ED374C,.25);
+    border-color: #ed374c;
+    box-shadow: 0 0 0 0.25rem rgba(#ed374c, 0.25);
   }
 }
 
 .form-select {
   background-position: left 0.75rem center;
-  padding: 1.1rem 1.1rem  0.75rem 2.25rem;
+  padding: 1.1rem 1.1rem 0.75rem 2.25rem;
 }
 
 .form-calendar {
   background-position: left 0.75rem center;
   appearance: none;
-  background-image: url('../images/svg/date.svg');
+  background-image: url("../images/svg/date.svg");
   background-repeat: no-repeat;
 }
 
 .form-location {
   background-position: left 0.75rem center;
   appearance: none;
-  background-image: url('../images/svg/map.svg');
+  background-image: url("../images/svg/map.svg");
   background-repeat: no-repeat;
 }
 
@@ -163,10 +170,25 @@ label {
     height: 17px;
   }
 }
-
+.btn-collapse-cms {
+  background-color: #eaf0f2;
+  border-color: #eaf0f2;
+  width: 47px;
+  height: 41px;
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: darken(#eaf0f2, 5%);
+    border-color: #eaf0f2;
+  }
+  img {
+    width: 18px;
+    height: 17px;
+  }
+}
 
 .border-blue-gray {
-  border: 1px solid #DEE9EE;
+  border: 1px solid #dee9ee;
 }
 
 .download-item {
@@ -174,17 +196,17 @@ label {
   background-position: left 0.75rem center;
   border-radius: 5px;
   appearance: none;
-  background-image: url('../images/svg/document-download.svg');
+  background-image: url("../images/svg/document-download.svg");
   background-repeat: no-repeat;
 }
-
 
 .d-sm-none {
   @include media-breakpoint-down(sm) {
     display: none;
   }
 }
-// header titles 
+/// start text styles
+// header titles
 .title-type-2 {
   text-align: right;
   font-size: 18px;
@@ -201,9 +223,20 @@ label {
   justify-content: start;
   align-items: center;
   padding: 0 1em;
-    input {
-      border: 0;
-      background-color: transparent;
-      height: 40px;
-    }
+  input {
+    border: 0;
+    background-color: transparent;
+    height: 40px;
+  }
 }
+.placeholder-text-color::placeholder {
+  color: $placeholder-text-color;
+}
+/// end text styles
+// start alert styles
+.alert-success-cms {
+  font-size: 18px;
+  font-weight: 500;
+  color: #41a757;
+}
+// end alert styles
